[gd_scene load_steps=14 format=2]

[ext_resource path="res://prefabs/Character.gd" type="Script" id=1]
[ext_resource path="res://assets/audio/hit.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/audio/jump.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/images/chara-walk-01.png" type="Texture" id=4]
[ext_resource path="res://assets/images/chara-walk-02.png" type="Texture" id=5]
[ext_resource path="res://assets/images/chara-walk-03.png" type="Texture" id=6]
[ext_resource path="res://assets/images/chara-walk-04.png" type="Texture" id=7]
[ext_resource path="res://assets/images/chara-jump-01.png" type="Texture" id=8]
[ext_resource path="res://assets/images/chara-jump-02.png" type="Texture" id=9]
[ext_resource path="res://assets/images/chara-dead-01.png" type="Texture" id=10]
[ext_resource path="res://assets/images/chara-fall-01.png" type="Texture" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19, 24 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ) ],
"loop": false,
"name": "jump",
"speed": 12.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": false,
"name": "die",
"speed": 1.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": false,
"name": "fall",
"speed": 5.0
} ]

[node name="Character" type="Area2D"]
input_pickable = false
collision_mask = 6
script = ExtResource( 1 )
DEATH_ANIM_LENGTH = 0.125

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AudioHitSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
attenuation = 0.125

[node name="AudioJumpSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
attenuation = 0.25

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "die"

[node name="DeathTween" type="Tween" parent="."]

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="." to="." method="_on_Character_area_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
